manifest/objects/ALTF__Qualifier_Quicklink__c.object
<CustomObject>
    <description>ADMIN ONLY DATA CONFIG

This object is responsible for the association of Qualifiers to Quicklinks and can be accessed form the Qualifiers page.</description>
    <fields>
        <fullName>ALTF__AltifyId__c</fullName>
        <description>An external ID used for Altify</description>
        <externalId>true</externalId>
        <label>AltifyId</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ALTF__Quicklink__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <inlineHelpText>The quicklink that should be made available for the associated qualifier. Selected from the defined list of quicklinks.</inlineHelpText>
        <label>Quicklink</label>
        <referenceTo>ALTF__Quicklink__c</referenceTo>
        <relationshipLabel>Qualifier Quicklinks</relationshipLabel>
        <relationshipName>DM_Qualifier_Quicklinks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ALTF__Sales_Process_Qualifier__c</fullName>
        <inlineHelpText>The qualifier that the quicklink should be displayed beside.</inlineHelpText>
        <label>Qualifier</label>
        <referenceTo>ALTF__Sales_Process_Qualifier__c</referenceTo>
        <relationshipLabel>Qualifier Quicklinks</relationshipLabel>
        <relationshipName>DM_Qualifier_Quicklinks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ALTF__SortOrder__c</fullName>
        <inlineHelpText>Order in which the quicklink is displayed if there is more than one quicklink associated with this qualifier.</inlineHelpText>
        <label>SortOrder</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Altify Qualifier Quicklink</label>
    <listViews>
        <fullName>ALTF__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Qualifier Quicklink Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Altify Qualifier Quicklinks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>